--- a/Portals/0/rich-content/loreal/ean.html
+++ b/Portals/0/rich-content/loreal/ean.html
@@ -9,18 +9,18 @@
       type="text/css"
       href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./ean/css/style.css" />
   </head>
   <body>
     <div class="es-loreal" id="es-loreal">
       <section class="es-kv">
         <div class="es-kv__logo">
-          <img src="./images/logo.png" alt="" class="es-kv__img" />
+          <img src="./ean/images/logo.png" alt="" class="es-kv__img" />
         </div>
         <div class="es-kv__packshot">
           <img
             class="es-kv__packshot-img"
-            src="./images/kv-bg.png"
+            src="./ean/images/kv-bg.png"
             alt="Revitalift Laser X3"
           />
         </div>
@@ -71,7 +71,7 @@
           <div class="es-ingredients__image-container">
             <img
               class="es-ingredients__image"
-              src="./images/ingredients.png"
+              src="./ean/images/ingredients.png"
               alt="Składniki aktywne"
             />
           </div>
@@ -142,7 +142,7 @@
             <div class="es-reasons__image-content">
               <img
                 class="es-reasons__image"
-                src="./images/reasons.png"
+                src="./ean/images/reasons.png"
                 alt="Revitalift laser X3 obrazek"
               />
             </div>
@@ -155,7 +155,7 @@
           <div class="es-feedback__image-content">
             <img
               class="es-feedback__image"
-              src="./images/feedback.png"
+              src="./ean/images/feedback.png"
               alt="Kasia Hubińska"
             />
             <p class="es-feedback__image-title">
@@ -229,14 +229,14 @@
             <div class="es-slider__persona">
               <div class="es-slider__photo">
                 <img
-                  src="./images/expert-photo.png"
+                  src="./ean/images/expert-photo.png"
                   alt=""
                   class="es-slider__img"
                 />
               </div>
               <div class="es-slider__photo">
                 <img
-                  src="./images/expert-sign.png"
+                  src="./ean/images/expert-sign.png"
                   alt=""
                   class="es-slider__img"
                 />
@@ -297,7 +297,7 @@
               <div class="slick-button-prev">
                 <div class="es-slider__arrow">
                   <img
-                    src="./images/arrow-left.png"
+                    src="./ean/images/arrow-left.png"
                     alt=""
                     class="es-slider__img"
                   />
@@ -306,7 +306,7 @@
               <div class="slick-button-next">
                 <div class="es-slider__arrow">
                   <img
-                    src="./images/arrow-right.png"
+                    src="./ean/images/arrow-right.png"
                     alt=""
                     class="es-slider__img"
                   />
@@ -330,7 +330,7 @@
                 <h4 class="es-cross__wrapper-title">poranek</h4>
                 <img
                   class="es-cross__wrapper-icon"
-                  src="./images/morning-icon.png"
+                  src="./ean/images/morning-icon.png"
                   alt="Poranek ikona"
                 />
               </div>
@@ -340,7 +340,7 @@
                 <div class="es-cross__packshot es-cross__packshot--1">
                   <img
                     class="es-cross__img"
-                    src="./images/cross-1.png"
+                    src="./ean/images/cross-1.png"
                     alt="Revitalift Laser X3 Serum"
                   />
                 </div>
@@ -359,7 +359,7 @@
                 <div class="es-cross__packshot es-cross__packshot--2">
                   <img
                     class="es-cross__img"
-                    src="./images/cross-2.png"
+                    src="./ean/images/cross-2.png"
                     alt="Revitalift Laser X3 Krem pod oczy"
                   />
                 </div>
@@ -380,7 +380,7 @@
                 <div class="es-cross__packshot es-cross__packshot--3">
                   <img
                     class="es-cross__img"
-                    src="./images/cross-3.png"
+                    src="./ean/images/cross-3.png"
                     alt="Revitalift Laser X3 Krem SPF 25"
                   />
                 </div>
@@ -405,7 +405,7 @@
                 <h4 class="es-cross__wrapper-title">wieczór</h4>
                 <img
                   class="es-cross__wrapper-icon"
-                  src="./images/evening-icon.png"
+                  src="./ean/images/evening-icon.png"
                   alt="Poranek ikona"
                 />
               </div>
@@ -415,7 +415,7 @@
                 <div class="es-cross__packshot es-cross__packshot--1">
                   <img
                     class="es-cross__img"
-                    src="./images/cross-4.png"
+                    src="./ean/images/cross-4.png"
                     alt="Revitalift Laser Pure Retinol Serum na noc"
                   />
                 </div>
@@ -435,7 +435,7 @@
                 <div class="es-cross__packshot es-cross__packshot--5">
                   <img
                     class="es-cross__img"
-                    src="./images/cross-5.png"
+                    src="./ean/images/cross-5.png"
                     alt="Revitalift Laser X3 Krem na noc"
                   />
                 </div>
@@ -452,7 +452,7 @@
                 <div class="es-cross__packshot es-cross__packshot--6">
                   <img
                     class="es-cross__img"
-                    src="./images/cross-6.png"
+                    src="./ean/images/cross-6.png"
                     alt="Revitalift Laser X3 Maska w płachcie"
                   />
                 </div>
@@ -492,6 +492,6 @@
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
 
-    <script src="./scripts/slider.js"></script>
+    <script src="./ean/scripts/slider.js"></script>
   </body>
 </html>
