feat: update links

--- a/Portals/0/rich-content/loreal/3600522480228.html
+++ b/Portals/0/rich-content/loreal/3600522480228.html
@@ -394,7 +394,11 @@
                 przed szkodliwym promieniowaniem UV.
               </p>
             </div>
-            <a href="#" class="es-cross__button">Kup teraz</a>
+            <a
+              href="https://www.rossmann.pl/Produkt/Kremy-do-twarzy/LOreal-Paris-Revitalift-Laser-X3-krem-przeciwzmarszczkowy-na-dzien-40-SPF-20-50-ml,279187,9223"
+              class="es-cross__button"
+              >Kup teraz</a
+            >
           </div>
         </div>
       </div>
@@ -428,7 +432,11 @@
                 retinolu.
               </p>
             </div>
-            <a href="#" class="es-cross__button">Kup teraz</a>
+            <a
+              href="https://www.rossmann.pl/Produkt/Serum/LOreal-Paris-Revitalift-Laser-serum-do-twarzy-na-noc-glebokie-zmarszczki-Pure-Retinol-30-ml,366328,9225"
+              class="es-cross__button"
+              >Kup teraz</a
+            >
           </div>
           <div class="es-cross__single">
             <div class="es-cross__packshot es-cross__packshot--5">
@@ -441,11 +449,15 @@
             <div class="es-cross__group es-cross__group--dark-pink">
               <p class="es-cross__name">Revitalift Laser X3 Krem na noc</p>
               <p class="es-cross__subtitle">
-                Odczekaj aż serum się wchłonie i nałóż nałoż na twarz, szyję
-                oraz dekolt przeciwzmarszczkowy krem na noc.
+                Odczekaj aż serum się wchłonie i nałóż na twarz, szyję oraz
+                dekolt przeciwzmarszczkowy krem na noc.
               </p>
             </div>
-            <a href="#" class="es-cross__button">Kup teraz</a>
+            <a
+              href="https://www.rossmann.pl/Produkt/Kremy-do-twarzy/LOreal-Paris-Revitalift-Laser-X3-krem-maska-przeciwzmarszczkowy-na-noc-40-50-ml,183788,9223"
+              class="es-cross__button"
+              >Kup teraz</a
+            >
           </div>
           <div class="es-cross__single es-cross">
             <div class="es-cross__packshot es-cross__packshot--6">
