--- a/Portals/0/rich-content/loreal/3600522480228.html
+++ b/Portals/0/rich-content/loreal/3600522480228.html
@@ -3,12 +3,9 @@
   type="text/css"
   href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
 />
-<link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link
-  href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;600&family=Roboto:wght@300;400;500;700;900&display=swap"
-  rel="stylesheet"
-/>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 
 <link
   rel="stylesheet"
