--- a/Portals/0/rich-content/loreal/3600522480228.html
+++ b/Portals/0/rich-content/loreal/3600522480228.html
@@ -3,19 +3,22 @@
   type="text/css"
   href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
 />
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
+  rel="stylesheet"
+/>
 
 <link
   rel="stylesheet"
-  href="https://www.ros.net.pl/Portals/0/rich-content/loreal3600522480228/css/style.css"
+  href="https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/css/style.css"
 />
 <div class="es-loreal" id="es-loreal">
   <section class="es-kv">
     <div class="es-kv__logo">
       <img
-        src="https://www.ros.net.pl/Portals/0/rich-content/loreal3600522480228/images/logo.png"
+        src="https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/images/logo.png"
         alt=""
         class="es-kv__img"
       />
@@ -23,7 +26,7 @@
     <div class="es-kv__packshot">
       <img
         class="es-kv__packshot-img"
-        src="https://www.ros.net.pl/Portals/0/rich-content/loreal3600522480228/images/kv-bg.png"
+        src="https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/images/kv-bg.png"
         alt="Revitalift Laser X3"
       />
     </div>
@@ -70,7 +73,7 @@
       <div class="es-ingredients__image-container">
         <img
           class="es-ingredients__image"
-          src="https://www.ros.net.pl/Portals/0/rich-content/loreal3600522480228/images/ingredients.png"
+          src="https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/images/ingredients.png"
           alt="Składniki aktywne"
         />
       </div>
@@ -141,7 +144,7 @@
         <div class="es-reasons__image-content">
           <img
             class="es-reasons__image"
-            src="https://www.ros.net.pl/Portals/0/rich-content/loreal3600522480228/images/reasons.png"
+            src="https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/images/reasons.png"
             alt="Revitalift laser X3 obrazek"
           />
         </div>
@@ -154,7 +157,7 @@
       <div class="es-feedback__image-content">
         <img
           class="es-feedback__image"
-          src="https://www.ros.net.pl/Portals/0/rich-content/loreal3600522480228/images/feedback.png"
+          src="https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/images/feedback.png"
           alt="Kasia Hubińska"
         />
         <p class="es-feedback__image-title">
@@ -228,14 +231,14 @@
         <div class="es-slider__persona">
           <div class="es-slider__photo">
             <img
-              src="https://www.ros.net.pl/Portals/0/rich-content/loreal3600522480228/images/expert-photo.png"
+              src="https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/images/expert-photo.png"
               alt=""
               class="es-slider__img"
             />
           </div>
           <div class="es-slider__photo">
             <img
-              src="https://www.ros.net.pl/Portals/0/rich-content/loreal3600522480228/images/expert-sign.png"
+              src="https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/images/expert-sign.png"
               alt=""
               class="es-slider__img"
             />
@@ -295,7 +298,7 @@
           <div class="slick-button-prev">
             <div class="es-slider__arrow">
               <img
-                src="https://www.ros.net.pl/Portals/0/rich-content/loreal3600522480228/images/arrow-left.png"
+                src="https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/images/arrow-left.png"
                 alt=""
                 class="es-slider__img"
               />
@@ -304,7 +307,7 @@
           <div class="slick-button-next">
             <div class="es-slider__arrow">
               <img
-                src="https://www.ros.net.pl/Portals/0/rich-content/loreal3600522480228/images/arrow-right.png"
+                src="https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/images/arrow-right.png"
                 alt=""
                 class="es-slider__img"
               />
@@ -328,7 +331,7 @@
             <h4 class="es-cross__wrapper-title">poranek</h4>
             <img
               class="es-cross__wrapper-icon"
-              src="https://www.ros.net.pl/Portals/0/rich-content/loreal3600522480228/images/morning-icon.png"
+              src="https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/images/morning-icon.png"
               alt="Poranek ikona"
             />
           </div>
@@ -338,7 +341,7 @@
             <div class="es-cross__packshot es-cross__packshot--1">
               <img
                 class="es-cross__img"
-                src="https://www.ros.net.pl/Portals/0/rich-content/loreal3600522480228/images/cross-1.png"
+                src="https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/images/cross-1.png"
                 alt="Revitalift Laser X3 Serum"
               />
             </div>
@@ -361,7 +364,7 @@
             <div class="es-cross__packshot es-cross__packshot--2">
               <img
                 class="es-cross__img"
-                src="https://www.ros.net.pl/Portals/0/rich-content/loreal3600522480228/images/cross-2.png"
+                src="https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/images/cross-2.png"
                 alt="Revitalift Laser X3 Krem pod oczy"
               />
             </div>
@@ -384,7 +387,7 @@
             <div class="es-cross__packshot es-cross__packshot--3">
               <img
                 class="es-cross__img"
-                src="https://www.ros.net.pl/Portals/0/rich-content/loreal3600522480228/images/cross-3.png"
+                src="https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/images/cross-3.png"
                 alt="Revitalift Laser X3 Krem SPF 25"
               />
             </div>
@@ -412,7 +415,7 @@
             <h4 class="es-cross__wrapper-title">wieczór</h4>
             <img
               class="es-cross__wrapper-icon"
-              src="https://www.ros.net.pl/Portals/0/rich-content/loreal3600522480228/images/evening-icon.png"
+              src="https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/images/evening-icon.png"
               alt="Poranek ikona"
             />
           </div>
@@ -422,7 +425,7 @@
             <div class="es-cross__packshot es-cross__packshot--1">
               <img
                 class="es-cross__img"
-                src="https://www.ros.net.pl/Portals/0/rich-content/loreal3600522480228/images/cross-4.png"
+                src="https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/images/cross-4.png"
                 alt="Revitalift Laser Pure Retinol Serum na noc"
               />
             </div>
@@ -446,7 +449,7 @@
             <div class="es-cross__packshot es-cross__packshot--5">
               <img
                 class="es-cross__img"
-                src="https://www.ros.net.pl/Portals/0/rich-content/loreal3600522480228/images/cross-5.png"
+                src="https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/images/cross-5.png"
                 alt="Revitalift Laser X3 Krem na noc"
               />
             </div>
@@ -467,7 +470,7 @@
             <div class="es-cross__packshot es-cross__packshot--6">
               <img
                 class="es-cross__img"
-                src="https://www.ros.net.pl/Portals/0/rich-content/loreal3600522480228/images/cross-6.png"
+                src="https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/images/cross-6.png"
                 alt="Revitalift Laser X3 Maska w płachcie"
               />
             </div>
@@ -508,4 +511,4 @@
   src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
 ></script>
 
-<script src="https://www.ros.net.pl/Portals/0/rich-content/loreal3600522480228/scripts/slider.js"></script>
+<script src="https://www.ros.net.pl/Portals/0/rich-content/loreal/3600522480228/scripts/slider.js"></script>
